--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.3",
         "@types/uuid": "^10.0.0",
+        "axios": "^1.8.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
@@ -44,6 +45,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
+        "@types/axios": "^0.9.36",
         "@types/express": "^5.0.0",
         "@types/node": "^20.17.24",
         "@types/react": "^19",
