--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "express": "^4.21.2",
         "lucide-react": "^0.477.0",
         "next": "15.2.0",
+        "next-auth": "^4.24.11",
         "next-themes": "^0.4.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
