--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "prisma generate && next dev --turbopack",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -32,7 +32,7 @@
         "date-fns": "^4.1.0",
         "express": "^4.21.2",
         "lucide-react": "^0.477.0",
-        "next": "15.2.0",
+        "next": "^15.2.4",
         "next-auth": "^4.24.11",
         "next-themes": "^0.4.4",
         "pg": "^8.14.0",
