--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@radix-ui/react-tabs": "^1.1.3",
         "@types/uuid": "^10.0.0",
         "axios": "^1.8.3",
+        "canvas": "^3.1.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
@@ -54,6 +55,7 @@
         "@types/node": "^20.17.24",
         "@types/pg": "^8.11.11",
         "@types/react": "^19",
+        "@types/nodemailer": "^6.4.17",
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.2.0",
