--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "seed": "node --import tsx prisma/seed.ts"
     },
     "dependencies": {
+        "@microsoft/microsoft-graph-client": "^3.0.7",
         "@prisma/client": "^6.5.0",
         "@prisma/extension-accelerate": "^1.2.2",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -31,8 +32,9 @@
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "express": "^4.21.2",
+        "isomorphic-fetch": "^3.0.0",
         "lucide-react": "^0.477.0",
-        "next": "15.2.0",
+        "next": "^15.2.5",
         "next-auth": "^4.24.11",
         "next-themes": "^0.4.4",
         "pg": "^8.14.0",
