--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "dev": "prisma generate && next dev --turbopack",
+        "dev": "prisma generate && next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -37,7 +37,6 @@
         "next-auth": "^4.24.11",
         "next-themes": "^0.4.4",
         "pg": "^8.14.0",
-        "prisma": "^6.4.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "5.5.0",
@@ -49,19 +48,21 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4",
+        "@tailwindcss/postcss": "^4.1.3",
         "@types/axios": "^0.9.36",
         "@types/express": "^5.0.0",
         "@types/node": "^20.17.24",
+        "@types/nodemailer": "^6.4.17",
         "@types/pg": "^8.11.11",
         "@types/react": "^19",
-        "@types/nodemailer": "^6.4.17",
         "@types/react-dom": "^19",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9",
         "eslint-config-next": "15.2.0",
         "nodemon": "^3.1.9",
+        "postcss": "^8.4.38",
         "prisma": "^6.5.0",
-        "tailwindcss": "^4",
+        "tailwindcss": "^4.1.3",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.3",
         "typescript": "^5.8.2"
