--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "next": "^15.2.4",
         "next-auth": "^4.24.11",
         "next-themes": "^0.4.4",
+        "nodemailer": "^6.10.1",
         "pg": "^8.14.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
