--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "prisma generate && next dev",
-        "build": "next build",
+        "build": "prisma generate --no-engine && next build",
         "start": "next start",
         "lint": "next lint",
         "nodemon": "nodemon --watch . --ext ts,json --exec tsx index.ts"
